fix: add ft_d_lstadd_back

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ilhna <ilhna@student.42seoul.kr>           +#+  +:+       +#+         #
+#    By: choiejae <choiejae@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/08 21:24:48 by ilhna             #+#    #+#              #
-#    Updated: 2023/01/24 00:19:27 by ilhna            ###   ########.fr        #
+#    Updated: 2023/01/26 15:11:56 by choiejae         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,6 +32,7 @@ SOURCES_MANDATORY = \
 			ft_split_one_cstm.c \
 
 SOURCES_BONUS = \
+			ft_d_lstadd_back.c  \
 			ft_lstadd_back.c  \
 			ft_lstadd_front.c \
 			ft_lstclear.c     \
