fix: add ft_d_lstadd_back

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ilhna <ilhna@student.42seoul.kr>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/08 21:24:48 by ilhna             #+#    #+#              #
-#    Updated: 2023/01/30 21:11:37 by ilhna            ###   ########.fr        #
+#    Updated: 2023/01/30 21:31:05 by ilhna            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,6 +35,7 @@ SOURCES_MANDATORY = \
 			ft_d_lstadd_back.c \
 
 SOURCES_BONUS = \
+			ft_d_lstadd_back.c  \
 			ft_lstadd_back.c  \
 			ft_lstadd_front.c \
 			ft_lstclear.c     \
