feat: cd 시 OLDPWD export 생성, cd, export 에러메세지 출력

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: choiejae <choiejae@student.42.fr>          +#+  +:+       +#+         #
+#    By: ejachoi <ejachoi@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/08 21:24:48 by ilhna             #+#    #+#              #
-#    Updated: 2023/01/30 21:37:42 by ilhna            ###   ########.fr        #
+#    Updated: 2023/02/01 15:26:55 by ejachoi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,7 +27,7 @@ SOURCES_MANDATORY = \
 			ft_memchr.c      ft_striteri.c       ft_toupper.c \
 			ft_memcmp.c      ft_strjoin.c \
 			ft_memcpy.c      ft_strlcat.c \
-			ft_free_split.c \
+			ft_free_split.c	 ft_strcat.c\
 			\
 			ft_split_one_cstm.c \
 			ft_atolld.c \
